# 4HYBD

./: .env.example  .gitignore  docker-compose.yml
backend-api-service/: Cargo.toml  Dockerfile.dev  README.MD
backend-api-service/src/: db.rs  extractor.rs  main.rs
backend-api-service/src/controllers/: auth_controller.rs  friend_controller.rs  group_controller.rs  location_controller.rs  message_controller.rs  mod.rs  story_controller.rs  user_controller.rs
backend-api-service/src/models/: auth_model.rs  friend_model.rs  group_model.rs  location_model.rs  message_model.rs  mod.rs  story_model.rs  user_model.rs
backend-api-service/src/services/: auth_service.rs  file_service.rs  friend_service.rs  group_service.rs  location_service.rs  message_service.rs  mod.rs  story_service.rs  user_service.rs
backend-api-service/src/utils/: api_response.rs  jwt.rs  mod.rs  utils_fn.rs
mobile-app-service/: Dockerfile.dev  README.md  capacitor.config.ts  index.html  ionic.config.json  package-lock.json  package.json  start.sh  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1747680091207-477efae1268e4.mjs
mobile-app-service/src/: App.tsx  config.ts  custom.d.ts  declaration.d.ts
mobile-app-service/src/components/: CameraView.css  CameraView.tsx  MapView.css  MapView.tsx  NewChatModal.css  NewChatModal.tsx  PostComposer.css  PostComposer.tsx  StoryCapture.css  StoryCapture.tsx  StoryCircles.css  StoryCircles.tsx  StoryMap.css  StoryMap.tsx  StoryViewer.css  StoryViewer.tsx  index.ts
mongo-init-scripts/: init-admin-user.js  init-indexes.js
(+33 files in other folders)
