[package]
name = "backend-api-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
dotenv = "0.15.0"
mongodb = "3.2.3"
serde =  { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
validator = { version = "0.20.0", features = ["derive"]}
futures-util = "0.3.31"
regex = "1.11.1"
once_cell = "1.21.3"
bson = { version = "2.14.0", features = ["chrono-0_4"] }
chrono = "0.4.40"
jsonwebtoken = "9.3.1"
bcrypt = "0.17"